# aapt2-android

./: CMakeLists.txt  README.md  build.sh
cmake/: aapt.cmake  aapt2.cmake  aidl.cmake  libandroidfw.cmake  libcutils.cmake  libexpat.cmake  libfmt.cmake  libgtest.cmake  libincfs.cmake  libjsoncpp.cmake  libpcre.cmake  libpcre2.cmake  libpng.cmake  libprotobuf.cmake  libselinux.cmake  libsepol.cmake  libziparchive.cmake  libzopfli.cmake  protoc.cmake  zipalign.cmake
libs/: CMakeLists.txt  libincfs.cmake  libpng.cmake  libselinux.cmake  libsepol.cmake
src/aapt/: Main.cpp
src/aapt2/: Resources.pb.cc  Resources.pb.h
src/aapt2/jni/: aapt2_jni.cpp  aapt2_jni.h
src/aapt2/util/: Util.cpp
src/aidl/: aidl_language_l.cpp  aidl_language_l.h  aidl_language_l.ll  aidl_language_y.cpp  aidl_language_y.h  lex.yy.c  location.hh  options.cpp  y.output  y.tab.c  y.tab.h
src/libbase/: logging.cpp
src/libbase/include/android-base/: unique_fd.h
src/libcutils/: properties.cpp
src/libprocessgroup/: processgroup.cpp  task_profiles.cpp
src/libziparchive/: zip_archive.cc
src/pcre/include/: pcre2.h
src/protobuf/src/google/protobuf/stubs/: common.cc
tests/: build.txt
tools/: CMakeLists.txt  aapt.cmake  aapt2.cmake  zipalign.cmake
